--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://Akshayofficial:islandbot1904@tgbotproject.uwaxq.mongodb.net/Tgbotproject?retryWrites=true&w=majority&ssl=true&ssl_cert_reqs=CERT_NONE
+BOT_TOKEN=7866673972:AAFSczpid7J-1vAANUfFgKkq0pxaz-Rc9oA
