--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "main.py",
+      "src": "ShinobiCompass/main.py",
       "use": "@vercel/python"
     }
   ],
@@ -12,7 +12,8 @@
   "routes": [
     {
       "src": "/",
-      "dest": "main.py"
+      "dest": "ShinobiCompass/main.py"
     }
   ]
 }
+
