--- a/stackhost.yaml
+++ b/stackhost.yaml
@@ -1,16 +1,18 @@
+language: python
+
 commands:
   build:
-    - "pip install -r requirements.txt"  # Install dependencies
+    - "pip install -r requirements.txt"
 
   package:
-    - "nano .env"                        # Edit the environment configuration
-    - "nano ShinobiCompass/main.py"      # Edit the main bot file (if needed)
-    - "cp .env ShinobiCompass/"          # Ensure the .env file is placed in the bot directory
-    - "zip -r ShinobiCompass.zip ShinobiCompass/"  # Package the bot into a ZIP archive
+    - "nano .env"
+    - "nano ShinobiCompass/main.py"
+    - "cp .env ShinobiCompass/"
+    - "zip -r ShinobiCompass.zip ShinobiCompass/"
 
   start:
-    - "python3 ShinobiCompass/main.py"   # Start the bot
+    - "python3 ShinobiCompass/main.py"
 
 env:
-  - "ENVIRONMENT=production"             # Set the environment to production
-  - "DATABASE_URL=mongodb+srv://Akshayofficial:islandbot1904@tgbotproject.uwaxq.mongodb.net/?retryWrites=true&w=majority"  # MongoDB connection URL
+  - "ENVIRONMENT=production"
+  - "DATABASE_URL=mongodb+srv://Akshayofficial:islandbot1904@tgbotproject.uwaxq.mongodb.net/?retryWrites=true&w=majority"
