--- a/stackhost.yaml
+++ b/stackhost.yaml
@@ -5,11 +5,11 @@ commands:
     - "pip install -r requirements.txt"
 
   package:
-    - "nano ShinobiCompass/main.py"
-    - "zip -r ShinobiCompass.zip ShinobiCompass/"
+    - "nano main.py"
+    - "zip -r ShinobiCompass.zip ./"
 
   start:
-    - "python3 ShinobiCompass/main.py"
+    - "python3 main.py"
 
 env:
   - "ENVIRONMENT=production"
