--- a/stackhost.yaml
+++ b/stackhost.yaml
@@ -5,7 +5,7 @@ commands:
     - "pip install -r requirements.txt"
     
   start:
-    - "python3 src/app.py"
+    - "python3 app.py"
 
 env:
   - "ENVIRONMENT=production"
