--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-telegram-bot
-python-dotenv
-pymongo
-fastapi
-uvicorn
+python-telegram-bot>=20.3
+python-dotenv>=0.21.0
+pymongo>=4.0.0
+fastapi>=0.100.0
+uvicorn[standard]>=0.22.0
