--- a/stackhost.yaml
+++ b/stackhost.yaml
@@ -5,7 +5,7 @@ commands:
     - "pip install -r requirements.txt"
     
   start:
-    - "python3 app.py"
+    - "uvicorn app:app --host 0.0.0.0 --port 8000"
 
 env:
   - "ENVIRONMENT=production"
