--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-fastapi==0.95.0
-uvicorn==0.18.0
-python-telegram-bot
-python-dotenv
-pymongo
-pytz
+python-telegram-bot==20.5
+python-dotenv==1.0.0
+pymongo==4.4.1      
+pytz==2023.3
